$Id$

Summary of Changes to DuroDBMS

DuroDBMS 0.18

- Syntax of RENAME and SUMMARIZE are now close to Tutorial version from Oct 30, 2011. 

- Duro D/T: Added implicit transaction support. 

- Fixed issue with updating key attributes.

- Added initexp argument to RDB_define_type() and INIT specification
   to type definition statement. Added initexp argument to duro::type define.

DuroDBMS 0.17

- Improved query optimization, escpecially MINUS, INTERSECT, SEMIMINUS, and SEMIJOIN.

- Added RDB_table_matching_tuple() to the public interface.

- Added FastCGI support.

- Renamed length(string) to strlen().

- Operator www_form_to_tuple converts urlencoded form data to a tuple value.

- Changed operator precedence to allow for expressions like
  T1 { A } SUBSET_OF T2 { A }

- getenv() returns an empty string if the environment variable does not exist.

- Improved support for type binary, including read() operators for reading
  binary data.

- Assigning components in a multiple assignment now supported.

- Added LIKE operator.

- Renamed MATCHES to REGEX_LIKE.

- index_of() operator supports searching in arrays.

- KEY no longer mandatory when creating real or private tables
  even when there is no INIT value.

- IMPLEMENT TYPE now supports multiple possible representations.

DuroDBMS 0.16

- Components are now accessed directly by their names in type constraints.

- durodump.tcl exports only real tables.

- IMPLEMENT TYPE now requires END IMPLEMENT.

- Duro D/T: Added DEFAULT, FOREACH loop, INDEX, DROP INDEX, EXPLAIN

- Duro D/T now uses GNU readline, providing keyword completion.
  (Not under MS Windows)

- Added TCLOSE, MATCHING, NOT MATCHING

- Renamed RDB_drop_expr() to RDB_del_expr() for consistency.

- RDB_get_table() now raises a name_error if the table is not found.

- Dropped database SYS_DB.

Duro 0.15

- Replaced PRINT/PRINTLN/READLN by put/put_line/get_line.

- Changed WITH and EXTEND syntax according to Database Explorations.
